<resources>
    <string name="app_name">Whats cooking</string>
    <string name="launcher_app_name">Заглушка на активити загрузки</string>
    <string name="version">(alpha)</string>
    <string name="option1">Ингредиенты</string>
    <string name="option2">Рецепты</string>
    <string name="option3">Избранное</string>
    <string name="option1_description">Выбери ингредиенты и мы поможем выбрать блюдо</string>
    <string name="option2_description">Все блюда</string>
    <string name="option3_description">Твои любимые блюда</string>
    <string name="get_back">Назад</string>
    <string name="complete">Готово</string>
    <string name="settings">Настройки</string>
    <string name="add_ingredient">Добавьте первый ингредиент</string>
    <string name="link_activity_title">Список ингредиентов</string>
    <string name="all_categories_activity_title">Выбери ингредиенты</string>
    <string name="title_activity_cooking">CookingActivity</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="step">шаг</string>
    <string name="enjoy_your_meal">Приятного аппетита!</string>
    <string name="your_meal">Вы приготовили</string>
    <string name="in_time">за</string>
    <string name="minutes">минут</string>
    <string name="taste">вкуснота</string>
    <string name="cost">стоимость</string>
    <string name="difficulty">сложность</string>
    <string name="please_rate">пожалуйста, оцените это блюдо</string>
    <string name="pass_through">пропустить</string>
    <string name="of">из</string>
    <string name="clear">очистить</string>
    <string name="start_timer_btn_text">Запустить таймер</string>
    <string name="add_to_favorite_btn">В избранное</string>
</resources>
