<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_content"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <!--
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:src="@drawable/app_icon_full"/>
    -->

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:columnCount="2"
        android:rowCount="6"
        android:padding="@dimen/activity_horizontal_margin">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/enjoy_your_meal"
            android:textAlignment="center"
            android:textSize="30dp"
            android:textColor="@color/colorText"
            android:layout_row="0"
            android:layout_column="0"
            android:layout_columnSpan="2"
            android:layout_marginBottom="@dimen/appbar_padding_top"/>

        <TextView
            android:id="@+id/your_meal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/activity_horizontal_margin"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/colorText"
            android:textAlignment="center"
            android:text="@string/please_rate"
            android:layout_row="1"
            android:layout_column="0"
            android:layout_columnSpan="2"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/colorText"
            android:text="@string/taste"
            android:id="@+id/label_taste"
            android:layout_row="2"
            android:layout_column="0"
            android:layout_gravity="center_vertical"
            android:padding="@dimen/rating_label_padding"/>

        <SeekBar
            android:layout_height="wrap_content"
            android:id="@+id/seekBarTaste"
            android:layout_row="2"
            android:layout_column="1"
            android:indeterminate="false"
            android:indeterminateOnly="false"
            android:longClickable="false"
            android:layout_width="0dip"
            android:layout_gravity="fill_horizontal|center_vertical"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/colorText"
            android:text="@string/cost"
            android:id="@+id/label_cost"
            android:layout_row="3"
            android:layout_column="0"
            android:layout_gravity="center_vertical"
            android:padding="@dimen/rating_label_padding"/>

        <SeekBar
            android:layout_height="wrap_content"
            android:id="@+id/seekBarCost"
            android:layout_row="3"
            android:layout_column="1"
            android:indeterminate="false"
            android:layout_width="0dip"
            android:layout_gravity="fill_horizontal|center_vertical"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/colorText"
            android:text="@string/difficulty"
            android:id="@+id/label_difficulty"
            android:layout_row="4"
            android:layout_column="0"
            android:layout_gravity="center_vertical"
            android:padding="@dimen/rating_label_padding"/>

        <SeekBar
            android:layout_height="wrap_content"
            android:id="@+id/seekBarDiff"
            android:layout_row="4"
            android:layout_column="1"
            android:layout_width="0dip"
            android:layout_gravity="fill_horizontal|center_vertical"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/complete"
            android:id="@+id/instruction_complete"
            android:onClick="addRate"
            android:backgroundTint="@color/white"
            android:textColor="@color/colorAccent"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:layout_row="5"
            android:layout_column="0"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pass_through"
            android:id="@+id/pass_through"
            android:onClick="passThroughRate"
            android:backgroundTint="@color/white"
            android:textColor="@color/colorAccent"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:layout_row="5"
            android:layout_column="1"/>
        <!--
        <View
            android:layout_width="wrap_content"
            android:layout_height="1dip"
            android:background="@color/colorDescription"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:layout_row="5"
            android:layout_column="0"
            android:layout_columnSpan="2"/>
        -->
    </GridLayout>

    <!--
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/complete"
        android:id="@+id/instruction_complete"
        android:layout_gravity="bottom|center"
        android:layout_margin="@dimen/activity_vertical_margin"
        android:onClick="addRate"
        style="@style/Base.Widget.AppCompat.Button.Borderless"
        android:textColor="@color/colorAccent"/>
    -->


</android.support.design.widget.CoordinatorLayout>